# principles_and_practice_using_cpp

./: .gitignore  CMakeLists.txt  README.md
part_1_the_basics/: CMakeLists.txt  chap_3_drill.cpp  chap_3_probl_10.cpp  chap_3_probl_13.cpp  chap_3_probl_16.cpp  chap_3_probl_16.h  chap_3_probl_17.cpp  chap_3_probl_18.cpp  chap_3_probl_19.cpp  chap_3_probl_2.cpp  chap_3_probl_4.cpp  chap_3_probl_6.cpp  chap_3_probl_6.h  chap_3_probl_7.cpp  chap_3_probl_8.cpp
part_1_the_basics/chapter_4/: CMakeLists.txt  drill.cpp  problem_11.cpp  problem_13.cpp  problem_16.cpp  problem_16.h  problem_17.cpp  problem_19.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_6.h  problem_7.cpp
part_1_the_basics/chapter_5/: CMakeLists.txt  problem_11.cpp  problem_12.cpp  problem_15.cpp  problem_2.cpp  problem_8.cpp
part_1_the_basics/chapter_6/: CMakeLists.txt  calculator02buggy.cpp  problem_10.cpp  problem_4.cpp  problem_6.cpp  problem_7.txt  problem_8.cpp  problem_9.cpp  words.txt
part_1_the_basics/chapter_7/: CMakeLists.txt  calculator08buggy.cpp
part_1_the_basics/chapter_8/: CMakeLists.txt  chapter_8.h  my.cpp  my.h  problem_10.cpp  problem_10.h  problem_11.cpp  problem_12.cpp  problem_13.cpp  problem_14.cpp  problem_2.cpp  problem_2.h  problem_3.cpp  problem_3.h  problem_4.cpp  problem_5.cpp  problem_5.h  problem_6.cpp  problem_7.cpp  problem_7.h  problem_9.cpp  use.cpp
part_1_the_basics/chapter_8/drill/: drill_3.cpp  my.cpp  my.h  std_lib_facilities.h  use.cpp
part_1_the_basics/chapter_9/: CMakeLists.txt  book.cpp  book.h  date.cpp  date.h  drill_1.cpp  drill_2.cpp  drill_3.cpp  drill_4.cpp  drill_5.cpp  library.cpp  library.h  money.cpp  money.h  name_pairs.cpp  name_pairs.h  patron.cpp  patron.h  problem_1.cpp  problem_1.txt  problem_13.cpp  problem_14.cpp  problem_4.cpp  problem_5.cpp  rational.cpp  rational.h
part_2_input_and_output/: CMakeLists.txt
part_2_input_and_output/ch_10/: CMakeLists.txt  generate_check_files.cpp  generate_check_files.hpp  problem_11.cpp  problem_2.cpp  problem_3.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp  roman_int.cpp  roman_int.hpp  utility.cpp  utility.hpp
part_2_input_and_output/ch_10/drill/: CMakeLists.txt  drill.cpp  point.cpp  point.hpp
part_2_input_and_output/ch_10/problem_1/: CMakeLists.txt  problem_1.cpp
part_2_input_and_output/ch_11/: BinaryToText.cpp  BinaryToText.hpp  CMakeLists.txt  PunctStream.cpp  PunctStream.hpp  Test_output.cpp  TextToBinary.cpp  TextToBinary.hpp  chapter_11.cpp  chapter_11.hpp  problem_1.cpp  problem_10.cpp  problem_12.cpp  problem_13.cpp  problem_14.cpp  problem_15.cpp  problem_16.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_9.cpp
part_2_input_and_output/ch_12/: CMakeLists.txt  drill.cpp  problem_1.cpp  problem_11.cpp  problem_12.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
part_2_input_and_output/ch_13/: Arc.cpp  Arc.hpp  Arrow.cpp  Arrow.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Poly.cpp  Poly.hpp  Regular_hexagon.cpp  Regular_hexagon.hpp  Regular_polygon.cpp  Regular_polygon.hpp  Right_triangle.cpp  Right_triangle.hpp  Star.cpp  Star.hpp  connection_points.hpp  drill.cpp  problem_1.cpp  problem_11.cpp  problem_12.cpp  problem_13.cpp  problem_14.cpp  problem_15.cpp  problem_16.cpp  problem_18.cpp  problem_19.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
part_2_input_and_output/ch_14/: Binary_tree.cpp  Binary_tree.hpp  CMakeLists.txt  Pseudo_window.cpp  Pseudo_window.hpp  Stripped_closed_polyline.cpp  Stripped_closed_polyline.hpp  ch_14.md  drill.cpp  problem_1.cpp  problem_10.cpp  problem_11.cpp  problem_12.cpp  problem_13.cpp  problem_14.cpp  problem_15.cpp  problem_16.cpp  problem_1_to_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
part_2_input_and_output/ch_15/: Bar.cpp  Bar.hpp  CMakeLists.txt  drill1.cpp  drill2.cpp  problem_11.cpp  problem_2.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_8.cpp  problem_9.cpp
part_2_input_and_output/ch_16/: CMakeLists.txt  drill.cpp  problem_1.cpp  problem_10.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
part_3_data_and_algorithms/: CMakeLists.txt
part_3_data_and_algorithms/ch_17/: CMakeLists.txt  drill.cpp  problem_1.cpp  problem_10.txt  problem_11.cpp  problem_12.txt  problem_13.cpp  problem_14.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp  problem_7.cpp  problem_8.cpp  problem_9.cpp
part_3_data_and_algorithms/ch_18/: CMakeLists.txt  answers.md  helper_functions.h  p3ch18dr1.cpp  p3ch18dr2.cpp  p3ch18ex1.cpp  p3ch18ex10.cpp  p3ch18ex11.cpp  p3ch18ex2.cpp  p3ch18ex3.cpp  p3ch18ex4.cpp  p3ch18ex56.cpp  p3ch18ex7.cpp  p3ch18ex8.cpp  p3ch18ex9.cpp
part_3_data_and_algorithms/ch_19/: CMakeLists.txt  p3ch19dr.cpp
thirdparties/graphics/: CMakeLists.txt
thirdparties/graphics/include/graphics/: Graph.h  MatrixIO.h  MatrixIO11.h  Simple_window.h  fltk.h  std_lib_facilities.h
thirdparties/graphics/src/: CMakeLists.txt  GUI.cpp  Graph.cpp  Simple_window.cpp  Window.cpp
