cmake_minimum_required(VERSION 3.15)
project(principles_and_practice_using_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(p1c3 part_1_the_basics/chap_3_drill.cpp)
add_executable(p1c3pr2 part_1_the_basics/chap_3_probl_2.cpp)
add_executable(p1c3pr3 part_1_the_basics/chap_3_probl_3.cpp)
add_executable(p1c3pr4 part_1_the_basics/chap_3_probl_4.cpp)
add_executable(p1c3pr5 part_1_the_basics/chap_3_probl_5.cpp)
add_executable(p1c3pr6 part_1_the_basics/chap_3_probl_6.cpp part_1_the_basics/chap_3_probl_6.h)
add_executable(p1c3pr7 part_1_the_basics/chap_3_probl_7.cpp)
add_executable(p1c3pr8 part_1_the_basics/chap_3_probl_8.cpp)
add_executable(p1c3pr10 part_1_the_basics/chap_3_probl_10.cpp)
add_executable(p1c3pr11 part_1_the_basics/chap_3_probl_11.cpp)
add_executable(p1c3pr13 part_1_the_basics/chap_3_probl_13.cpp)
add_executable(p1c3pr16 part_1_the_basics/chap_3_probl_16.cpp part_1_the_basics/chap_3_probl_16.h)
add_executable(p1c3pr17 part_1_the_basics/chap_3_probl_17.cpp)
add_executable(p1c3pr18 part_1_the_basics/chap_3_probl_18.cpp)
