add_executable(p1c4drill drill.cpp)
add_executable(p1c4pr2 problem_2.cpp)
add_executable(p1c4pr3 problem_3.cpp)
add_executable(p1c4pr4 problem_4.cpp)
add_executable(p1c4pr5 problem_5.cpp)
add_executable(p1c4pr6 problem_6.cpp problem_6.h)
add_executable(p1c4pr7 problem_7.cpp)
add_executable(p1c4pr8 problem_8.cpp)
add_executable(p1c4pr10 problem_10.cpp)
add_executable(p1c4pr11 problem_11.cpp)
add_executable(p1c4pr13 problem_13.cpp)
add_executable(p1c4pr16 problem_16.cpp problem_16.h)
add_executable(p1c4pr17 problem_17.cpp)
add_executable(p1c4pr18 problem_18.cpp)
add_executable(p1c4pr19 problem_19.cpp)