add_executable(p1c8drill drill/use.cpp drill/my.cpp)
add_executable(p1c8d3 drill/drill_3.cpp)
add_executable(p1c8pr2 problem_2.cpp)
add_executable(p1c8pr3 problem_3.cpp)
add_executable(p1c8pr4 problem_4.cpp)
add_executable(p1c8pr5 problem_5.cpp)
add_executable(p1c8pr6 problem_6.cpp)
add_executable(p1c8pr7 problem_7.cpp)