add_executable(p1c9dr1 drill_1.cpp)
add_executable(p1c9dr2 drill_2.cpp)
add_executable(p1c9dr3 drill_3.cpp)
add_executable(p1c9dr4 drill_4.cpp)
add_executable(p1c9dr5 drill_5.cpp)

add_executable(p1c9pr1 problem_1.cpp "name_pairs.cpp")
add_executable(p1c9pr4 problem_4.cpp)
add_executable(p1c9pr5 problem_5.cpp "book.cpp" "date.cpp" "patron.cpp")