add_subdirectory(drill)

add_executable(p2ch10pr1 problem_1.cpp)
add_executable(p2ch10pr2 problem_2.cpp)
add_executable(p2ch10pr3 problem_3.cpp)
add_executable(p2ch10pr5 problem_5.cpp)
add_executable(p2ch10pr6 problem_6.cpp "generate_check_files.cpp" "roman_int.cpp" "utility.cpp")
add_executable(p2ch10pr7 problem_7.cpp roman_int.cpp generate_check_files.cpp)
add_executable(p2ch10pr8 problem_8.cpp utility.cpp)
add_executable(p2ch10pr9 problem_9.cpp utility.cpp)
add_executable(p2ch10pr11 problem_11.cpp utility.cpp)