add_executable(p2ch11drill "Test_output.cpp" "chapter_11.cpp")
add_executable(p2ch11pr1 "problem_1.cpp" "chapter_11.cpp")
add_executable(p2ch11pr2 "problem_2.cpp" "chapter_11.cpp")
add_executable(p2ch11pr3 "problem_3.cpp" "chapter_11.cpp")
add_executable(p2ch11pr4 "problem_4.cpp" "chapter_11.cpp")
add_executable(p2ch11pr5 "problem_5.cpp" "chapter_11.cpp")
add_executable(p2ch11pr6 "problem_6.cpp" "PunctStream.cpp" "chapter_11.cpp")
add_executable(p2ch11pr9 "problem_9.cpp" "BinaryToText.cpp" "TextToBinary.cpp" "chapter_11.cpp")
add_executable(p2ch11pr10 "problem_10.cpp" "chapter_11.cpp" "chapter_11.hpp")
add_executable(p2ch11pr12 "problem_12.cpp" "chapter_11.cpp" "chapter_11.hpp")
add_executable(p2ch11pr13 "problem_13.cpp" "chapter_11.cpp" "chapter_11.hpp")