add_executable(p2ch12drill drill.cpp)
target_link_libraries(p2ch12drill graphics)

add_executable(p2ch12pr1 problem_1.cpp)
target_link_libraries(p2ch12pr1 graphics)

add_executable(p2ch12pr2 problem_2.cpp)
target_link_libraries(p2ch12pr2 graphics)

add_executable(p2ch12pr3 problem_3.cpp)
target_link_libraries(p2ch12pr3 graphics)