add_executable(p2ch12drill drill.cpp)
target_link_libraries(p2ch12drill graphics)

add_executable(p2ch12pr1 problem_1.cpp)
target_link_libraries(p2ch12pr1 graphics)

add_executable(p2ch12pr2 problem_2.cpp)
target_link_libraries(p2ch12pr2 graphics)

add_executable(p2ch12pr3 problem_3.cpp)
target_link_libraries(p2ch12pr3 graphics)

add_executable(p2ch12pr4 problem_4.cpp)
target_link_libraries(p2ch12pr4 graphics)

add_executable(p2ch12pr5 problem_5.cpp)
target_link_libraries(p2ch12pr5 graphics)

add_executable(p2ch12pr6 problem_6.cpp)
target_link_libraries(p2ch12pr6 graphics)

add_executable(p2ch12pr7 problem_7.cpp)
target_link_libraries(p2ch12pr7 graphics)

add_executable(p2ch12pr8 problem_8.cpp)
target_link_libraries(p2ch12pr8 graphics)

add_executable(p2ch12pr9 problem_9.cpp)
target_link_libraries(p2ch12pr9 graphics)

add_executable(p2ch12pr11 problem_11.cpp)
target_link_libraries(p2ch12pr11 graphics)