add_executable(p2ch15dr1 drill1.cpp)
target_link_libraries(p2ch15dr1 graphics)

add_executable(p2ch15dr2 drill2.cpp)

add_executable(p2ch15pr2 problem_2.cpp)
target_link_libraries(p2ch15pr2 graphics)

add_executable(p2ch15pr4 problem_4.cpp)
target_link_libraries(p2ch15pr4 graphics)

add_executable(p2ch15pr5 problem_5.cpp)
target_link_libraries(p2ch15pr5 graphics)

add_executable(p2ch15pr6 problem_6.cpp Bar.cpp Bar.hpp)
target_link_libraries(p2ch15pr6 graphics)