add_executable(p2ch16dr drill.cpp)
target_link_libraries(p2ch16dr graphics)

add_executable(p2ch16pr1 problem_1.cpp)
target_link_libraries(p2ch16pr1 graphics)

add_executable(p2ch16pr2 problem_2.cpp)
target_link_libraries(p2ch16pr2 graphics)

add_executable(p2ch16pr3 problem_3.cpp)
target_link_libraries(p2ch16pr3 graphics)

add_executable(p2ch16pr4 problem_4.cpp ../ch_13/Regular_polygon.cpp)
target_link_libraries(p2ch16pr4 graphics)

add_executable(p2ch16pr5 problem_5.cpp)
target_link_libraries(p2ch16pr5 graphics)

add_executable(p2ch16pr6 problem_6.cpp)
target_link_libraries(p2ch16pr6 graphics)

add_executable(p2ch16pr7 problem_7.cpp)
target_link_libraries(p2ch16pr7 graphics)

add_executable(p2ch16pr8 problem_8.cpp)
target_link_libraries(p2ch16pr8 graphics)

add_executable(p2ch16pr9 problem_9.cpp)
target_link_libraries(p2ch16pr9 graphics)

add_executable(p2ch16pr10 problem_10.cpp)
target_link_libraries(p2ch16pr10 graphics)