add_executable(p3ch17dr drill.cpp)
add_executable(p3ch17pr1 problem_1.cpp)
add_executable(p3ch17pr2 problem_2.cpp)
add_executable(p3ch17pr3 problem_3.cpp)
add_executable(p3ch17pr4 problem_4.cpp)
add_executable(p3ch17pr5 problem_5.cpp)
add_executable(p3ch17pr6 problem_6.cpp)
add_executable(p3ch17pr7 problem_7.cpp)
add_executable(p3ch17pr8 problem_8.cpp)
add_executable(p3ch17pr9 problem_9.cpp)
add_executable(p3ch17pr11 problem_11.cpp)
add_executable(p3ch17pr13 problem_13.cpp)
add_executable(p3ch17pr14 problem_14.cpp)