add_executable(p3ch18dr1 p3ch18dr1.cpp)
add_executable(p3ch18dr2 p3ch18dr2.cpp)
add_executable(p3ch18ex1 p3ch18ex1.cpp)
add_executable(p3ch18ex2 p3ch18ex2.cpp)
add_executable(p3ch18ex3 p3ch18ex3.cpp)
add_executable(p3ch18ex4 p3ch18ex4.cpp)
add_executable(p3ch18ex56 p3ch18ex56.cpp helper_functions.h)
add_executable(p3ch18ex7 p3ch18ex7.cpp helper_functions.h)
add_executable(p3ch18ex8 p3ch18ex8.cpp helper_functions.h)
add_executable(p3ch18ex9 p3ch18ex9.cpp)
add_executable(p3ch18ex10 p3ch18ex10.cpp)